--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "license": "MIT",
   "scripts": {
     "sass": "sass scss:css",
-    "build": "rollup javascript/index.js --file bundle.js --format iife"
+    "build": "rollup -c"
   },
   "devDependencies": {
+    "@rollup/plugin-replace": "^5.0.2",
+    "dotenv": "^16.3.1",
     "rollup": "^3.27.2",
     "sass": "^1.64.2"
   }
