--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Install dependencies
         run: npm install
       - name: Build with Rollup
-        run: npm run build -- --environment GOOGLE_PLACES_API_KEY=$GOOGLE_PLACES_API_KEY,WEATHER_API_KEY=$WEATHER_API_KEY
+        run: npm run prod-build -- --environment GOOGLE_PLACES_API_KEY=$GOOGLE_PLACES_API_KEY,WEATHER_API_KEY=$WEATHER_API_KEY
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v2
         with:
